--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta
       name="description"
       content="Café de especialidad en Triple Peaks. ¡Ven a disfrutar café, estudiar y compartir en un ambiente cómodo y moderno!"
-    />
-    <meta name="author" content="Snayder" />
+    >
+    <meta name="author" content="Snayder" >
     <meta
       name="keywords"
       content="cafetería, café especialidad, recetas café, Triple Peaks"
-    />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    >
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" >
 
-    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="stylesheet" href="vendor/normalize.css" >
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Serif:wght@400;700&display=swap"
       rel="stylesheet"
-    />
+    >
 
-    <link rel="stylesheet" href="pages/index.css" />
+    <link rel="stylesheet" href="pages/index.css" >
 
     <title>Cafetería</title>
   </head>
@@ -35,7 +35,7 @@
             src="./images/logo_coffeeshop_dark.svg"
             alt="Logotipo de  la cafeteria Triple Peaks"
             class="nav__logo"
-          />
+          >
 
           <ul class="nav__links">
             <li>
@@ -51,8 +51,8 @@
         </nav>
 
         <h1 class="header__title">
-          <span class="span__accent">Cafe de especialidad </span>
-          <br />Triple Peaks
+          <span class="header__accent">Cafe de especialidad </span>
+          <br >Triple Peaks
         </h1>
 
         <p class="header__description">
@@ -64,7 +64,7 @@
           src="./images/inside_coffee_shop.png"
           alt="Ilustracion 'Dentro de la Cafeteria'"
           class="header__image"
-        />
+        >
 
         <div class="header__footer">
           <div class="header__schedule">
@@ -126,8 +126,8 @@
           </div>
         </section>
         <section class="reservation" id="reservation">
-          <h1 class="reservation__title">Reserva una mesa</h1>
-          <form class="reservation__form" action="">
+          <h3 class="reservation__title">Reserva una mesa</h3>
+          <form class="reservation__form" action="#">
             <div class="form-group">
               <label for="name">Nombre</label>
               <input
@@ -136,7 +136,7 @@
                 name="name"
                 placeholder="nombre"
                 required
-              />
+              >
             </div>
 
             <div class="form-group">
@@ -149,12 +149,12 @@
                 min="1"
                 max="8"
                 required
-              />
+              >
             </div>
 
             <div class="form-group">
               <label for="fecha">fecha y hora</label>
-              <input type="datetime-local" id="fecha" name="fecha" required />
+              <input type="datetime-local" id="fecha" name="fecha" required >
             </div>
 
             <div class="form-group">
@@ -164,17 +164,17 @@
                 id="email"
                 placeholder="email@email.com"
                 required
-              />
+              >
             </div>
 
             <div class="form-group">
               <label class="form-checkbox" for="terminos">
                 <input
-                  class="form__input-checkbox"
+                  class="reservation__checkbox"
                   type="checkbox"
                   id="terminos"
                   required
-                />
+                >
                 <span>Acepto los términos de uso</span>
               </label>
             </div>
