--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Noto+Serif:wght@400;700&display=swap"
       rel="stylesheet"
     >
-
-    <link rel="stylesheet" href="pages/index.css" >
+   <link rel="stylesheet" href="blocks/page.css">
 
     <title>Cafetería</title>
   </head>
