--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       rel="stylesheet"
     >
    <link rel="stylesheet" href="blocks/page.css">
+   <link rel="stylesheet" href="pages/index.css">
+
 
     <title>Cafetería</title>
   </head>
