segundo avance en proceso

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
       <h1 class="title">
         <span class="span-accent">Café de especialidad</span><br />
-        Triple Peaks
-      </h1>
+         <span class="title__bold">en Triple Peaks</span>
+</h1>
 
       <p class="description">
         ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café 
@@ -60,12 +60,16 @@
 <!-- 🔽 NUEVO BLOQUE HORARIO: DEBE IR FUERA DEL HEADER -->
 <section class="schedule">
   <div class="schedule__group">
-  <p class="paragraph"><strong>Horario:</strong></p>
-  <p class="paragraph">Lunes a Viernes (10:00h a 19:00h)</p>
-  <p class="paragraph">Sábados y Domingos (11:00h a 18:00h)</p>
+    <p class="paragraph"><strong>Horario:</strong></p>
+    <p class="paragraph">Lunes a Viernes: 8:00 - 22:00</p>
+    <p class="paragraph">Sábado y Domingo: 9:00 - 20:00</p>
   </div>
-  <p class="paragraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+  <div class="schedule__address">
+    <p class="paragraph">Avenida del Éxito 200,Ciudad Triple Peaks</p>
+  </div>
 </section>
+
+
 
     <main class="content">
       <section class="recipes" id="recipes">
@@ -78,7 +82,7 @@
           <div class="recipes__item">
             <iframe
               class="recipes__iframe"
-              src="https://www.youtube.com/embed/1a2b3c4d5e6?si=example"
+              src="https://www.youtube.com/watch?v=j6VlT_jUVPc"
               title="Receta en Aeropress"
               allowfullscreen
             ></iframe>
@@ -91,7 +95,7 @@
           <div class="recipes__item">
             <iframe
               class="recipes__iframe"
-              src="https://www.youtube.com/embed/8j1b2k3c4d5?si=example"
+              src="https://www.youtube.com/watch?v=st571DYYTR8"
               title="Receta en cafetera francesa"
               allowfullscreen
             ></iframe>
