segundo avance incomplet

--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
   </div>
 </section>
 
-
-
     <main class="content">
       <section class="recipes" id="recipes">
         <h2 class="recipes__title">Recetas</h2>
@@ -79,32 +77,35 @@
         </p>
 
         <div class="recipes__video">
-          <div class="recipes__item">
-            <iframe
-              class="recipes__iframe"
-              src="https://www.youtube.com/watch?v=j6VlT_jUVPc"
-              title="Receta en Aeropress"
-              allowfullscreen
-            ></iframe>
-            <div class="recipes__caption">
-              <p>Receta en Aeropress</p>
-              <p>~5 min</p>
-            </div>
-          </div>
+ <div class="recipes__video-item">
+  <iframe
+    class="recipes__iframe"
+    src="https://www.youtube.com/embed/tRIX9G7D_9Q"
+    title="Receta en Aeropress"
+    allowfullscreen
+  ></iframe>
+  <div class="recipes__caption-row">
+  <p class="caption__text">Receta en Aeropress</p>
+  <p class="caption__time">~5 min</p>
+</div>
+  </div>
 
-          <div class="recipes__item">
-            <iframe
-              class="recipes__iframe"
-              src="https://www.youtube.com/watch?v=st571DYYTR8"
-              title="Receta en cafetera francesa"
-              allowfullscreen
-            ></iframe>
-            <div class="recipes__caption">
-              <p>Receta en cafetera francesa</p>
-              <p>~15 min</p>
-            </div>
-          </div>
-        </div>
+<div class="recipes__video-item">
+  <iframe
+    class="recipes__iframe"
+    src="https://www.youtube.com/embed/_3MlAyoPga8"
+    title="Receta en cafetera francesa"
+    allowfullscreen
+  ></iframe>
+  <div class="recipes__caption">
+    <div class="recipes__caption-row">
+      <p class="caption__text">Receta en cafetera francesa</p>
+      <p class="caption__time">~15 min</p>
+    </div>
+</div>
+</div>
+
+
       </section>
 
       <section class="reservation" id="reservation">
