--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <title>Cafetería Triple Peaks</title>
   </head>
 
-  <body class="page">
+  <body>
+    <div  class="page">
     <header class="header">
       <nav class="nav">
         <img
