--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <div class="schedule">
           <div class="schedule__group">
             <p class="paragraph"><strong>Horario:</strong></p>
-            <p class="paragraph">Lunes a Viernes: 8:00 - 22:00</p>
-            <p class="paragraph">Sábado y Domingo: 9:00 - 20:00</p>
+            <p class="paragraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
+            <p class="paragraph">Sábado y Domingo (de 11:00h a 18:00h)</p>
           </div>
           <div class="schedule__address">
-            <p class="paragraph">Avenida del Éxito 200,Ciudad Triple Peaks</p>
+           <p class="paragraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
           </div>
         </div>
       </header>
