--- a/index.html
+++ b/index.html
@@ -27,48 +27,49 @@
 
   <body>
     <div class="page">
-      <header class="header">
-        <nav class="nav">
-          <img
-            src="./images/logo_coffeeshop_dark.svg"
-            alt="Logotipo de la cafetería Triple Peaks"
-            class="logo"
-          />
-          <ul class="nav__links">
-            <li><a href="#recipes" class="nav__link">Recetas</a></li>
-            <li>
-              <a href="#reservation" class="nav__link">Reservar una mesa</a>
-            </li>
-            <li><a href="#footer" class="nav__link">Contactos</a></li>
-          </ul>
-        </nav>
+   <header class="header">
+  <nav class="header__nav">
+    <img
+      src="./images/logo_coffeeshop_dark.svg"
+      alt="Logotipo de la cafetería Triple Peaks"
+      class="header__logo"
+    />
+    <ul class="header__nav-links">
+      <li><a href="#recipes" class="header__nav-link">Recetas</a></li>
+      <li><a href="#reservation" class="header__nav-link">Reservar una mesa</a></li>
+      <li><a href="#footer" class="header__nav-link">Contactos</a></li>
+    </ul>
+  </nav>
 
-        <h1 class="title">
-          <span class="span-accent">Café de especialidad</span><br />
-          <span class="title__bold">en Triple Peaks</span>
-        </h1>
+  <div class="header__content">
+    <div class="header__text">
+      <h1 class="header__title">
+        <span class="header__title-accent">Café de especialidad</span><br />
+        <span class="header__title-bold">en Triple Peaks</span>
+      </h1>
+      <p class="header__description">
+        ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
+        para darte energía y motivar tu creatividad.
+      </p>
+    </div>
+    <img
+      src="./images/inside_coffee_shop.png"
+      alt="Ilustración del interior de la cafetería"
+      class="header__image"
+    />
+  </div>
 
-        <p class="description">
-          ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
-          para darte energía y motivar tu creatividad.
-        </p>
-
-        <img
-          src="./images/inside_coffee_shop.png"
-          alt="Ilustración del interior de la cafetería"
-          class="image"
-        />
-        <div class="schedule">
-          <div class="schedule__group">
-            <p class="paragraph"><strong>Horario:</strong></p>
-            <p class="paragraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
-            <p class="paragraph">Sábado y Domingo (de 11:00h a 18:00h)</p>
-          </div>
-          <div class="schedule__address">
-           <p class="paragraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
-          </div>
-        </div>
-      </header>
+  <div class="header__footer">
+  <div class="header__schedule-group">
+    <p class="header__paragraph header__paragraph--bold">Horario:</p>
+    <p class="header__paragraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
+    <p class="header__paragraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
+  </div>
+  <div class="header__schedule-address">
+    <p class="header__paragraph">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+  </div>
+</div>
+</header>
 
       <main class="content">
         <section class="recipes" id="recipes">
@@ -78,7 +79,7 @@
             tus propios snacks.
           </p>
 
-          <div class="recipes__video">
+          <div class="recipes__videos">
             <div class="recipes__video-item">
               <iframe
                 class="recipes__iframe"
