--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <div class="header__footer">
   <div class="header__schedule-group">
-    <p class="header__paragraph--bold">Horario:</p>
+    <p class="header__paragraph header__paragraph_bold">Horario:</p>
     <p class="header__paragraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
     <p class="header__paragraph">Sábados y Domingos (de 11:00h a 18:00h)</p>
   </div>
