--- a/index.html
+++ b/index.html
@@ -28,25 +28,26 @@
   <body>
     <div class="page">
    <header class="header">
-  <nav class="header__nav">
-    <img
-      src="./images/logo_coffeeshop_dark.svg"
-      alt="Logotipo de la cafetería Triple Peaks"
-      class="header__logo"
-    />
-    <ul class="header__nav-links">
-      <li><a href="#recipes" class="header__nav-link">Recetas</a></li>
-      <li><a href="#reservation" class="header__nav-link">Reservar una mesa</a></li>
-      <li><a href="#footer" class="header__nav-link">Contactos</a></li>
-    </ul>
-  </nav>
-
-  <div class="header__content">
-    <div class="header__text">
-      <h1 class="header__title">
+ <nav class="nav">
+  <img
+    src="./images/logo_coffeeshop_dark.svg"
+    alt="Logotipo de la cafetería Triple Peaks"
+    class="header__logo"
+  />
+  <ul class="nav__links">
+    <li><a href="#recipes" class="nav__link">Recetas</a></li>
+    <li><a href="#reservation" class="nav__link">Reservar una mesa</a></li>
+    <li><a href="#footer" class="nav__link">Contactos</a></li>
+  </ul>
+</nav>
+ 
+<h1 class="header__title">
         <span class="header__title-accent">Café de especialidad</span><br />
         <span class="header__title-bold">en Triple Peaks</span>
       </h1>
+  <div class="header__content">
+    <div class="header__text">
+      
       <p class="header__description">
         ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
         para darte energía y motivar tu creatividad.
@@ -160,7 +161,7 @@
         </section>
       </main>
 
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <p class="paragraph">© 2025 Anderson Snayder Cortez</p>
         <div class="footer__links">
           <a class="footer__link" href="#">Facebook</a>
