--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
       <li><a href="#footer" class="nav__link">Contactos</a></li>
     </ul>
   </nav>
+   
    <div class="header__content">
-  <div>
+  <div class="header__text">
     <h1 class="header__title">
       <span class="header__title-accent">Café de especialidad</span><br />
       <span class="header__title-bold">en Triple Peaks</span>
@@ -50,7 +51,7 @@
       ¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
       para darte energía y motivar tu creatividad.
     </p>
-    </div>
+  </div>
     <img
       src="./images/inside_coffee_shop.png"
       alt="Ilustración del interior de la cafetería"
