--- a/index.html
+++ b/index.html
@@ -110,60 +110,29 @@
           <h3 class="reservation__title">Reserva una mesa</h3>
           <form class="reservation__form form" action="#">
   <fieldset class="form__fieldset">
-    <label class="form__label" for="name">Nombre *</label>
-    <input
-      class="form__input"
-      type="text"
-      id="name"
-      name="name"
-      placeholder="Nombre"
-      required
-    />
-
-    <label class="form__label" for="comensales">Número de comensales *</label>
-    <input
-      class="form__input"
-      type="number"
-      id="comensales"
-      name="comensales"
-      placeholder="1-8"
-      min="1"
-      max="8"
-      required
-    />
-
-    <label class="form__label" for="fecha">Fecha y hora *</label>
-    <input
-      class="form__input"
-      type="datetime-local"
-      id="fecha"
-      name="fecha"
-      required
-    />
-
-    <label class="form__label" for="email">Correo electrónico</label>
-    <input
-      class="form__input"
-      type="email"
-      id="email"
-      name="email"
-      placeholder="email@email.com"
-      required
-    />
-  </fieldset>
-
-  <label class="form__checkbox-group" for="terminos">
-    <input
-      class="form__checkbox"
-      type="checkbox"
-      id="terminos"
-      required
-    />
-    <span>Acepto los términos de uso</span>
+  <label class="form__label" for="nombre">
+    Nombre *
+    <input class="form__input" type="text" id="nombre" name="nombre" placeholder="Nombre" required />
+  </label>
+  <label class="form__label" for="comensales">
+    Número de comensales *
+    <input class="form__input" type="number" id="comensales" name="comensales" min="1" max="8" placeholder="1-8" required />
+  </label>
+  <label class="form__label" for="fecha">
+    Fecha y hora *
+    <input class="form__input" type="datetime-local" id="fecha" name="fecha" required />
+  </label>
+  <label class="form__label" for="email">
+    Tu Correo electrónico
+    <input class="form__input" type="email" id="email" name="email" placeholder="email@email.com" />
   </label>
 
-  <button type="submit" class="form__button">Reservar una mesa</button>
-</form>
+  <button class="form__button" type="submit">Reservar una mesa</button>
+</fieldset>
+<label class="form__checkbox-group" for="terminos">
+    <input class="form__checkbox" type="checkbox" id="terminos" required />
+    <span>Acepto los términos de uso</span>
+  </label>
 
         </section>
       </main>
